WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14846
Layout is not updated when table padding is changed through JavaScript
https://bugs.webkit.org/show_bug.cgi?id=14846
Summary
Layout is not updated when table padding is changed through JavaScript
Brett Wilson (Google)
Reported
2007-08-01 09:08:26 PDT
Setting cellPadding on a table in JavaScript has no effect. Cellspacing works.
Attachments
Testcase
(544 bytes, text/html)
2007-08-01 09:10 PDT
,
Brett Wilson (Google)
no flags
Details
Make sure to mark cells for layout
(14.09 KB, patch)
2008-01-16 13:29 PST
,
Dave Hyatt
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brett Wilson (Google)
Comment 1
2007-08-01 09:10:21 PDT
Created
attachment 15778
[details]
Testcase Pressing the cellpadding button which sets cellPadding="25" has no effect on the page. Pressing the cellspacing button which sets cellSpacing="25" after setting the padding will then update both the padding and the spacing. It seems that setting the padding stores the value, but doesn't cause a layout update. The spacing will force a layout, and the table will look correct.
Eric Seidel (no email)
Comment 2
2008-01-11 15:30:56 PST
sounds like a missing renderer()->setNeedsLayout(true) call in parseMappedAttribute for the table code.
Dave Hyatt
Comment 3
2008-01-16 13:29:36 PST
Created
attachment 18483
[details]
Make sure to mark cells for layout
Eric Seidel (no email)
Comment 4
2008-01-16 13:50:12 PST
Comment on
attachment 18483
[details]
Make sure to mark cells for layout I think the fix is great. Personally I find the name RenderTable:setCellPadding to promote more of (at least my) historical confusion as to whether it is correct to push attribute changes from the DOM to the Renderer (incorrect) or whether it's right to just mark renderers as needing layout and pull changes from the Renderers from the DOM (correct, and this change does that... in the cells). Anyway. Looks fine.
Dave Hyatt
Comment 5
2008-01-16 14:01:00 PST
Landed in
r29539
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug