WebCore:

Fix for http://bugs.webkit.org/show_bug.cgi?id=14846, cell padding can't be changed dynamically.

        Reviewed by Eric Seidel

        Added fast/table/dynamic-cellpadding.html

        * html/HTMLTableElement.cpp:
        (WebCore::HTMLTableElement::parseMappedAttribute):
        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::setCellPadding):
        * rendering/RenderTable.h:

LayoutTests:

        Reviewed by Eric Seidel

        http://bugs.webkit.org/show_bug.cgi?id=14846

        * fast/table/dynamic-cellpadding.html: Added.
        * platform/mac/fast/table/dynamic-cellpadding-expected.checksum: Added.
        * platform/mac/fast/table/dynamic-cellpadding-expected.png: Added.
        * platform/mac/fast/table/dynamic-cellpadding-expected.txt: Added.



Canonical link: https://commits.webkit.org/23371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29539 268f45cc-cd09-0410-ab3c-d52691b4dbfc